[package]
categories = [
    "rust-patterns",
    "development-tools::procedural-macro-helpers",
    "parsing",
]
description = "Support `use` in procmacros hygienically"
documentation = "https://docs.rs/quote-use"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["macro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/quote-use"
version = "0.7.1"
edition = "2021"
name = "quote-use"

[lib]

[dependencies]
quote = "1"
syn = "2"
quote-use-macros = { version = "0.7.1", path = "quote-use-macros" }

[features]
default = ["prelude_2021", "prelude_std"]
prelude_core = ["quote-use-macros/prelude_core"]
prelude_std = ["prelude_core", "quote-use-macros/prelude_std"]
prelude_2021 = ["prelude_core", "quote-use-macros/prelude_2021"]
namespace_idents = ["quote-use-macros/namespace_idents"]

[dev-dependencies]
pretty_assertions = "1"
proc-macro2 = "1"
syn = "2"

[workspace]
members = ["quote-use-macros"]

[package.metadata.release]
shared-version = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
