[package]
categories = [
  "rust-patterns",
  "development-tools::procedural-macro-helpers",
  "parsing",
]
description = "Support `use` in procmacros hygienically"
documentation = "https://docs.rs/quote-use"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["macro"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/ModProg/quote-use"
version = "0.8.0"
edition = "2021"
name = "quote-use-macros"

[lib]
proc-macro = true

[dependencies]
derive-where = "1"
proc-macro-utils = "0.8"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["parsing"], default-features = false}

[dev-dependencies]
pretty_assertions = "1.4"

[package.metadata.release]
shared-version = true
